<resources>
    <string name="app_name">AppMob</string>

    <string name="descr_logo">Logo de l\'application</string>
    <string name="descr_icon_user">Représentation iconographique de l\'utilisateur</string>
    <string name="descr_icon_mdp">Représentation iconographique du mot de passe</string>
    <string name="descr_menu_btn_open">Bouton pour ouvrir le menu</string>
    <string name="descr_menu_btn_close">Bouton pour fermer le menu</string>
    <string name="descr_menu_btn_home">Bouton pour accéder à l\'accueil</string>
    <string name="descr_menu_btn_param">Bouton pour accéder aux paramètres du compte</string>
    <string name="descr_menu_btn_annonce">Bouton pour ajouter une annonce</string>
    <string name="descr_menu_btn_modif">Bouton pour modifier une annonce</string>
    <string name="descr_menu_btn_rech">Bouton pour rechercher une personne</string>
    <string name="descr_menu_btn_com">Bouton pour commenter une prestation</string>

    <string name="titreConnexion">Connexion</string>
    <string name="titreInscription">Inscription</string>
    <string name="titreMenu">Du Balai !</string>
    <string name="titrefourn">Fournisseur</string>
    <string name="titredem">Demandeur</string>
    <string name="titreswap">Swap pour t\'inscrire</string>
    <string name="titre_tache">Choississez vos tâches</string>


    <string name="btn_deco">Deconnexion</string>
    <string name="btn_suite">Suite</string>

    <string name="hint_nom">Votre nom</string>
    <string name="hint_prenom">Votre prénom</string>
    <string name="hint_tel">Numéro de téléphone</string>
    <string name="hint_adresse">Adresse</string>
    <string name="hint_rayon">Rayon d\'action (en km)</string>
    <string name="hint_prix">Prix</string>

    <string name="action_sign_in_short">S\'inscrire</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Valider</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_post_ad">Créer une annonce</string>
    <string name="titlr_new_ad">Titre</string>
    <string name="title_activity_maps">Map</string>
</resources>
